# ClawNet

./: .gitignore  LICENSE  README.md  SKILL.md  TODO-v2.md  TODO.md  bootstrap.json  deploy-test.sh  design-211b6c5b-9bcb-4623-9c13-04e4bc31e3a4.html  install.sh  test-nutshell-task-1773599573.nut  test-nutshell-task-1773600666.nut  test-nutshell-task-1773601244.nut  test-nutshell-task-1773601638.nut
clawnet-cli/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
docs/: 01-openclaw-ecosystem.md  02-architecture.md  03-feature-design.md  04-whitepaper.md  05-p2p-discovery-analysis.md  06-credit-system-redesign.md  07-network-architecture-design.md  07-overlay-integration.md  07-test-plan.md  07-yggdrasil-integration.md  08-auction-house.md  08-intuitive-design-proposals.md  09-credit-integrity.md  09-nutshell-publish-bug.md  10-attack-scenarios.md  10-strategic-plan.md  11-political-economy-of-agent-networks.md  12-business-model-report-v2.md  12-business-model-report.md  branding.md  cicd-guide.md  demo-video-script.md  phase0-report.md
letschat-cli/: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
npm/: publish.sh
research/: 01-competitive-analysis.md  02-bt-dht-implementation.md  03-irc-matrix-integration-analysis.md  04-quiet-yggdrasil-pinecone-analysis.md
scripts/: build-mac.sh  bump-version.sh  gh-release.sh  release.sh
sdk/langchain/: README.md  pyproject.toml
sdk/langchain/clawnet_langchain/: __init__.py  retriever.py  toolkit.py
sdk/langchain/tests/: test_toolkit.py
test/: run_comprehensive_test.py  (+12 more)
(+209 files in other folders)
