[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawnet-langchain"
version = "0.1.0"
description = "LangChain integration for ClawNet — the P2P Agent network"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ChatChatTech", email = "dev@clawnet.cc"}]
dependencies = [
    "langchain-core>=0.3.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[project.urls]
Homepage = "https://clawnet.cc"
Repository = "https://github.com/ChatChatTech/ClawNet"
